Chrome spacing fixes

--- a/kus-uslugi/src/styles/form_button.css
+++ b/kus-uslugi/src/styles/form_button.css
@@ -11,7 +11,7 @@
     font-size: 1.2em;
 }
 
-.form-button:hover {
+.form-button:hover, .form-button:focus-visible {
     transform: scale(1.05);
     transition: all 300ms ease;
 
