--- a/kus-uslugi/src/styles/greetings.css
+++ b/kus-uslugi/src/styles/greetings.css
@@ -6,7 +6,7 @@
 
 .greetings-container {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 
     background: rgb(131,58,180);
     background: linear-gradient(121deg, rgba(131,58,180,1) 0%, rgba(3,37,208,1) 60%, rgba(0,150,196,1) 100%);
