--- a/kus-uslugi/src/styles/header.css
+++ b/kus-uslugi/src/styles/header.css
@@ -45,7 +45,7 @@
     top: 0;
     left: 0;
 
-    width: 100vw;
+    width: 100%;
 
     transition: top 1000ms ease 0ms;
 
