--- a/kus-uslugi/src/styles/main.css
+++ b/kus-uslugi/src/styles/main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Lato-normal";
-    src: url('/font/Lato-Regular.ttf') format('truetype');
+    src: url('/font/Lato-Medium.ttf') format('truetype');
     font-weight: normal;
 }
 
